--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "css-loader": "^0.28.11",
     "css-mqpacker": "^6.0.2",
     "cssnano": "^3.10.0",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-to-json": "^3.3.4",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "17.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -28,6 +31,7 @@
     "eslint-plugin-react": "^7.9.1",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^23.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "normalize.css": "^8.0.0",
     "postcss-loader": "^2.1.5",
@@ -46,9 +50,18 @@
     "webpack-md5-hash": "^0.0.6"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development",
     "build": "webpack --mode production",
+    "dev": "webpack-dev-server --mode development",
     "lint:css": "stylelint './src/**/*.js'",
-    "lint:js": "eslint ."
+    "lint:js": "eslint .",
+    "test": "jest --watch"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>/enzyme.config.js",
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "testRegex": "tests/.*\\.test\\.js$",
+    "verbose": true
   }
 }
