Add support to absolut paths

--- a/.eslintrc
+++ b/.eslintrc
@@ -16,5 +16,12 @@
     ],
     "react/jsx-filename-extension": 0
   },
-  "plugins": ["prettier"]
+  "plugins": ["import", "jsx-a11y", "prettier"],
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "./webpack.config.js"
+      }
+    }
+  }
 }
