--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "webpack": "^4.14.0",
     "webpack-cli": "^3.0.8",
     "webpack-dev-server": "^3.1.4",
+    "webpack-hot-middleware": "^2.22.2",
     "webpack-md5-hash": "^0.0.6"
   }
 }
