Use babel module resolver instead of webpack

--- a/.babelrc
+++ b/.babelrc
@@ -12,6 +12,14 @@
         "displayName": true,
         "fileName": false
       }
+    ],
+    [
+      "module-resolver", {
+        "alias": {
+          "components": "./app/components",
+          "store": "./app/store"
+        }
+      }
     ]
   ]
 }
